--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -27,3 +27,14 @@
     font-size: 14px;
     color: gray;
 }
+
+@media (max-width: 800px) {
+    .footer-icons img{
+        width: 25px;
+    }
+    .footer ul{
+        grid-template-columns: auto auto;
+        gap: 8px;
+        font-size: 14px;
+    }
+}
