--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -79,3 +79,27 @@
 .navbar-profile:hover .dropdown{
     display: block;
 }
+
+@media (max-width: 800px) {
+    .navbar{
+        padding: 20px 4%;
+    }
+    .navbar-left ul{
+        display: none;
+    }
+    .navbar img{
+        height: 25px;
+    }
+    .navbar-right .profile{
+        width: 25px;
+    }
+}
+
+@media (max-width: 500px) {
+    .navbar img{
+        height: 20px;
+    }
+    .navbar-right{
+        gap: 10px;
+    }
+}
