--- a/src/pages/Player/Player.css
+++ b/src/pages/Player/Player.css
@@ -24,3 +24,9 @@
     align-items: center;
     width: 90%;
 }
+
+@media (max-width: 500px) {
+    .player-info p{
+        font-size: 10px;
+    }
+}
